# clipshot

./: Readme.md  cargo.toml
encoder-service/: Cargo.toml
encoder-service/src/: main.rs  server.rs
libav-rs/: Cargo.toml
