[package]
name = "encoder-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-actix-web = "0.4.0-beta.14"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2"
actix-web = "4.0.0-beta.9"
color-eyre = "0.5"